<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>org.openrefine.dependencies</groupId>
  <artifactId>butterfly-container</artifactId>
  <version>1.2.6-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SIMILE Butterfly</name>
  <description>Butterfly is a modular web application framework</description>
  <url>https://github.com/OpenRefine/simile-butterfly</url>
  <inceptionYear>2007</inceptionYear>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <distributionManagement>
    <snapshotRepository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
        <id>ossrh</id>
        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <name>Stefano Mazzocchi</name>
    </developer>
    <developer>
      <name>David Huynh</name>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Ryan Lee</name>
    </contributor>
  </contributors>

  <modules>
    <module>main</module>
  </modules>

  <properties>
    <log4j.version>2.24.0</log4j.version>
  </properties>

  <scm>
    <connection>scm:git:https://github.com/OpenRefine/simile-butterfly.git</connection>
    <developerConnection>scm:git:https://github.com/OpenRefine/simile-butterfly.git</developerConnection>
    <url>https://github.com/OpenRefine/simile-butterfly</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/OpenRefine/simile-butterfly/issues</url>
  </issueManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.10</version>
        <configuration>
          <downloadSources>true</downloadSources>
        </configuration>
      </plugin>
     <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-javadoc-plugin</artifactId>
      <version>3.7.0</version>
      <configuration>
        <javadocExecutable>/usr/bin/javadoc</javadocExecutable>
        <source>8</source>
      </configuration>
      <executions>
        <execution>
          <id>attach-javadocs</id>
          <goals>
            <goal>jar</goal>
          </goals>
        </execution>
      </executions>
     </plugin>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-gpg-plugin</artifactId>
      <version>3.2.4</version>
      <executions>
        <execution>
          <id>sign-artifacts</id>
          <phase>verify</phase>
          <goals>
            <goal>sign</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
    </plugins>
  </build>

  <reporting>
    <outputDirectory>${project.build.directory}/docs</outputDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <aggregate>true</aggregate>
          <source>1.8</source>
          <reportOutputDir>${project.reporting.outputDirectory}/apidoc</reportOutputDir>
          <groups>
            <group>
              <title>Butterfly API</title>
              <packages>edu.mit.simile.butterfly*</packages>
            </group>
          </groups>
          <links>
            <link>http://java.sun.com/j2se/1.6.0/docs/api</link>
            <link>http://jakarta.apache.org/commons/collections/apidocs-COLLECTIONS_3_0/</link>
            <link>http://jakarta.apache.org/commons/dbcp/apidocs/</link>
            <link>http://jakarta.apache.org/commons/fileupload/apidocs/</link>
            <link>http://jakarta.apache.org/commons/httpclient/apidocs/</link>
            <link>http://jakarta.apache.org/commons/logging/api/</link>
            <link>http://jakarta.apache.org/commons/pool/apidocs/</link>
            <link>http://jakarta.apache.org/regexp/apidocs/</link>
            <link>http://jakarta.apache.org/velocity/api/</link>
            <link>http://logging.apache.org/log4j/docs/api/</link>
          </links>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <dependencies>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.10.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>
